--- a/package.json
+++ b/package.json
@@ -21,6 +21,6 @@
     "express": "^4.15.0",
     "express-handlebars": "^3.0.0",
     "method-override": "^2.3.7",
-    "mysql": "^2.13.0",
+    "mysql": "^2.13.0"
   }
 }
